# com5003-lwl-bridge

./: .gitignore  CMakeLists.txt  bridge.cpp  bridge.h  bridge.xml  bridge.xsd  bridgeconfigdata.h  bridgeconfiguration.cpp  bridgeconfiguration.h  com5003lwlbridge.pro  ethcmddelegate.cpp  ethcmddelegate.h  ethcmdserializer.cpp  ethcmdserializer.h  ethconnection.cpp  ethconnection.h  ethmeasuredelegate.cpp  ethmeasuredelegate.h  ethoscilloscopedelegate.cpp  ethoscilloscopedelegate.h  ethparameterdelegate.cpp  ethparameterdelegate.h  lwlconnection.cpp  lwlconnection.h  spi2fpga.h  spiconnection.cpp  spiconnection.h
src/: bridge.cpp  bridge.h  bridge.xml  bridge.xsd  bridgeconfigdata.h  bridgeconfiguration.cpp  bridgeconfiguration.h  ethcmddelegate.cpp  ethcmdserializer.h  ethconnection.h  ethmeasuredelegate.cpp  ethmeasuredelegate.h  ethparameterdelegate.cpp  ethparameterdelegate.h  lwlconnection.cpp  lwlconnection.h  main.cpp  spiconnection.cpp  spiconnection.h  spidevice.cpp  spidevice.h
